[sidebar] start to fix odd sidebar spacing for tablets

--- a/_less/stmwww.less
+++ b/_less/stmwww.less
@@ -74,8 +74,18 @@ footer.align-right {
  
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
-    .sidebar-fixed { position: fixed; width: 174px;} 
+    .sidebar-fixed { position: fixed; width: 174px; } 
     .navbar { display: none; }
+    .nav-collapse .nav > li > a { 
+        padding: 3px 15px; 
+        margin-bottom: 0px; 
+        font-weight: normal;
+        color: @linkColor;
+    }
+    .nav-list > li > a {
+        margin-left: -15px;
+        margin-right: -15px;
+    }
     .dl-horizontal.dl-wide {
         dt { width: 15em; }
         dd { margin-left: 16.5em; }
@@ -89,3 +99,11 @@ footer.align-right {
 /* Landscape phones and down */
 @media (max-width: 480px) { 
 }
+
+.page-header {
+    > .span6.pull-right { 
+        margin-left: 1em; 
+        margin-bottom: 1em;
+    }
+}
+
